# mobile-parser

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-08-tap-requires-element-id.md
src/mobile_parser/: __init__.py  coordinator.py  mobile_client.py  mobilecli.py  parser.py  server.py  wda.py
tests/: conftest.py  test_coordinator.py  test_helpers.py  test_proxy_tools.py
