[project]
name = "mobile-parser"
version = "0.3.0"
description = "Mobile testing MCP server: OmniParser UI element detection + direct device control (mobilecli + WDA)"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.45.0,<4.50.0",

    # OmniParser dependencies
    "ultralytics>=8.0.0",
    "supervision>=0.18.0",
    "timm>=1.0.0",
    "einops>=0.8.0",

    # OCR
    "easyocr>=1.7.0",

    # Image processing
    "pillow>=10.0.0",
    "numpy<2.0.0",
    "opencv-python-headless>=4.8.0",

    # HuggingFace Hub for model download
    "huggingface-hub>=0.20.0",

    # MCP
    "mcp[cli]>=1.3.0",
]
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
mobile-parser = "mobile_parser:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mobile_parser"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
